--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@sendgrid/mail": "^7.4.5",
+    "@types/mongodb": "^3.6.18",
+    "@types/sharp": "^0.28.3",
     "apollo-datasource-mongodb": "^0.4.3",
     "apollo-server-express": "^2.25.2",
     "axios": "^0.21.1",
@@ -38,6 +40,7 @@
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
+    "graphql-tools": "^7.0.5",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
