--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,11 @@ MONGODB_DEV_URI=mongodb://localhost:27017/EcommerceApiDevDB
 MONGODB_TEST_URI=mongodb://localhost:27017/EcommerceApiTestDB
 
 POSTGRES_CLOUD_URI=
-POSTGRES_LOCAL_URI=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_DB=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
 
 MYSQL_CLOUD_URI=
 MYSQL_LOCAL_URI=
@@ -22,6 +26,12 @@ EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_FROM=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY= 
+AWS_REGION= 
+AWS_BUCKET_NAME= 
+AWS_BUCKET_ROOT_DIR= 
 
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
