--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
   "semi": true,
   "tabWidth": 2,
-  "printWidth": 100,
+  "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "es5",
   "arrowParens": "avoid",
-  "jsxBracketSameLine": true
+  "jsxBracketSameLine": true,
+  "bracketSpacing": true,
+  "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }]
 }
