--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@sendgrid/mail": "^7.4.5",
-    "@types/mongodb": "^3.6.18",
-    "@types/sharp": "^0.28.3",
-    "apollo-datasource-mongodb": "^0.4.3",
     "apollo-server-express": "^2.25.2",
+    "aws-sdk": "^2.936.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^2.9.4",
@@ -36,16 +34,14 @@
     "dayjs": "^1.10.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
-    "graphql-tools": "^7.0.5",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
@@ -54,8 +50,11 @@
     "pino": "^6.11.3",
     "pug": "^3.0.2",
     "sharp": "^0.27.2",
+    "shortid": "^2.2.16",
     "slugify": "^1.5.3",
     "stripe": "^8.156.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
     "xss": "^1.0.9",
     "yup": "^0.32.9"
@@ -77,7 +76,10 @@
     "@types/node": "^15.12.4",
     "@types/nodemailer": "^6.4.2",
     "@types/pino": "^6.3.8",
+    "@types/shortid": "0.0.29",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
@@ -99,6 +101,6 @@
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.1.5"
   }
 }
