--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "APP",
   "main": "src/server.ts",
   "engines": {
-    "node": "^14",
-    "npm": "^6"
+    "node": "^16",
+    "npm": "^7"
   },
   "scripts": {
     "eslint": "eslint --fix",
     "test": "jest",
     "test:watch": "jest --watchAll --detectOpenHandles",
     "test:coverage": "jest --coverage",
-    "dev": "nodemon",
-    "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/server.js",
-    "build": "tsc -p tsconfig.prod.json",
+    "dev": "nodemon ./src/server.js",
+    "start": "node server.js",
     "debug": "ndb server.js"
   },
   "author": "philz stizles",
@@ -34,6 +33,7 @@
     "dayjs": "^1.10.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.2.6",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
@@ -46,6 +46,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.9",
     "pg": "^8.6.0",
     "pino": "^6.11.3",
     "pug": "^3.0.2",
@@ -56,31 +57,13 @@
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
-    "xss": "^1.0.9",
+    "xss-clean": "^0.1.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/dotenv-safe": "^8.1.1",
-    "@types/express": "^4.17.12",
-    "@types/express-rate-limit": "^5.1.2",
-    "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.2",
-    "@types/lodash": "^4.14.170",
-    "@types/morgan": "^1.9.2",
-    "@types/mysql": "^2.15.18",
-    "@types/node": "^15.12.4",
     "@types/nodemailer": "^6.4.2",
-    "@types/pino": "^6.3.8",
-    "@types/shortid": "0.0.29",
     "@types/supertest": "^2.0.11",
-    "@types/swagger-jsdoc": "^6.0.0",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.29.0",
@@ -95,7 +78,6 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.5",
     "ndb": "^1.1.5",
-    "nodemon": "^2.0.7",
     "prettier": "^2.3.1",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
