--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "jest --watchAll --detectOpenHandles",
     "test:coverage": "jest --coverage",
     "dev": "nodemon ./src/server.js",
-    "start": "node server.js",
+    "start": "node ./src/server.js",
     "debug": "ndb server.js"
   },
   "author": "philz stizles",
