--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ JWT_RESET_PASSWORD_EXPIRESIN=
 # EMAIL_HOST=
 # EMAIL_PORT=
 # EMAIL_FROM=
+ADMIN_EMAIL=
+
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY= 
