--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
