--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.3.4"
   }
 }
