Add file routes and file controller

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ AWS_REGION=
 AWS_BUCKET_NAME= 
 AWS_BUCKET_ROOT_DIR= 
 
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 
