--- a/package.json
+++ b/package.json
@@ -67,15 +67,18 @@
     "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.12",
     "@types/express-rate-limit": "^5.1.2",
+    "@types/formidable": "^1.2.3",
     "@types/hpp": "^0.2.1",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/lodash": "^4.14.170",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.18",
     "@types/node": "^15.12.4",
     "@types/nodemailer": "^6.4.2",
     "@types/pino": "^6.3.8",
+    "@types/sharp": "^0.28.4",
     "@types/shortid": "0.0.29",
     "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.0",
