--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "1.0.0",
   "description": "APP",
   "main": "src/server.ts",
-  "engines": {
-    "node": "^14",
-    "npm": "^6"
-  },
   "scripts": {
     "eslint": "eslint --fix",
     "test": "jest",
@@ -36,26 +32,32 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
+    "fast-csv": "^4.3.6",
+    "form-data": "^3.0.1",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mailgun.js": "^3.5.1",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
     "pg": "^8.6.0",
     "pino": "^6.11.3",
     "pug": "^3.0.2",
+    "sequelize": "^6.6.5",
     "sharp": "^0.27.2",
     "shortid": "^2.2.16",
     "slugify": "^1.5.3",
     "stripe": "^8.156.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
+    "tedious": "^11.0.9",
     "uuid": "^8.3.2",
     "xss": "^1.0.9",
     "yup": "^0.32.9"
@@ -78,6 +80,7 @@
     "@types/mysql": "^2.15.18",
     "@types/node": "^15.12.4",
     "@types/nodemailer": "^6.4.2",
+    "@types/pg": "^8.6.1",
     "@types/pino": "^6.3.8",
     "@types/sharp": "^0.28.4",
     "@types/shortid": "0.0.29",
