--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ JWT_AUTH_COOKIE_EXPIRES_IN=
 JWT_RESET_PASSWORD_SECRET=
 JWT_RESET_PASSWORD_EXPIRESIN=
 
+NODE_TLS_REJECT_UNAUTHORIZED=
+
 EMAIL_USERNAME= 
 EMAIL_PASSWORD=
 EMAIL_HOST=
