--- a/tsconfig.json
+++ b/tsconfig.json
@@ -79,8 +79,14 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["node_modules", "dist", "coverage", "**/*.test.ts"],
-  // "exclude": ["node_modules", "dist", "coverage"],
-  "include": ["src/**/*"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "coverage"
+    // "src/documentation"
+    // "**/*.test.ts"
+    // "**/*.spec.ts"
+  ]
+  // "include": ["src/**/*"]
   // "include": ["src"]
 }
