--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
+    "express-validator": "^6.12.0",
     "fast-csv": "^4.3.6",
     "form-data": "^3.0.1",
     "formidable": "^1.2.2",
@@ -41,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgun.js": "^3.5.1",
+    "mongodb-memory-server": "^7.2.0",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
