--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@graphql-tools/load-files": "^6.4.0",
+    "@graphql-tools/schema": "^8.2.0",
+    "@graphql-tools/utils": "^8.2.2",
     "@sendgrid/mail": "^7.4.5",
+    "apollo-datasource-mongodb": "^0.5.2",
+    "apollo-server-cache-redis": "^3.1.0",
     "apollo-server-express": "^2.25.2",
     "aws-sdk": "^2.936.0",
     "axios": "^0.21.1",
@@ -37,8 +42,11 @@
     "form-data": "^3.0.1",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
+    "graphql-upload": "^12.0.0",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
+    "ioredis": "^4.27.9",
     "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -60,6 +68,7 @@
     "slugify": "^1.5.3",
     "socket.io": "^4.1.3",
     "stripe": "^8.156.0",
+    "subscriptions-transport-ws": "^0.9.19",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "tedious": "^11.0.9",
@@ -76,7 +85,9 @@
     "@types/express": "^4.17.12",
     "@types/express-rate-limit": "^5.1.2",
     "@types/formidable": "^1.2.3",
+    "@types/graphql-upload": "^8.0.7",
     "@types/hpp": "^0.2.1",
+    "@types/ioredis": "^4.27.2",
     "@types/jest": "^27.0.1",
     "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^8.5.2",
