--- a/buyemall-server/package.json
+++ b/buyemall-server/package.json
@@ -8,7 +8,8 @@
     "test:ci": "jest",
     "test": "jest",
     "test:watch": "jest --watchAll --detectOpenHandles",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "npm test -- --coverage",
+    "test:badges": "npm run test:coverage  && jest-coverage-badges",
     "dev": "nodemon",
     "start": "node -r ts-node/register/transpile-only -r tsconfig-paths/register ./dist/src/server.js",
     "build": "tsc -p tsconfig.prod.json",
@@ -48,6 +49,7 @@
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "ioredis": "^4.27.9",
+    "jest-coverage-badges": "^1.1.2",
     "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
