--- a/.github/workflows/tests-buyemall-server.yml
+++ b/.github/workflows/tests-buyemall-server.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: tests-auth
+name: tests-buyemall-server
 
 # Controls when the workflow will run
 on:
